--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,4 +9,4 @@ jobs:
       - run: composer install -n --prefer-dist
       - run:
           name: php test
-          command: .\vendor\bin\phpunit tests\Unit\ShopControllerTest.php
+          command: vendor/bin/phpunit tests/Unit/ShopControllerTest.php
