--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,3 +16,29 @@ jobs:
       - run:
           name: php test
           command: vendor/bin/phpunit tests/Unit/ShopControllerTest.php
+  deploy:
+    docker:
+      - image: circleci/php:8.0.12-node-browsers-legacy
+    steps:
+      - add_ssh_keys
+      - run:
+          name: deploy
+          command: |
+            ssh -o StrictHostKeyChecking=no -t ec2-user@${HOST_NAME} "cd /var/www/html/advance_pj && \
+              git pull origin master && \
+              composer install -n --no-dev --prefer-dist && \
+              php artisan migrate --force && \
+              php artisan config:cache"
+
+workflows:
+  version: 2
+  build_deploy:
+    jobs:
+      - build
+      - deploy:
+          requires:
+            - build
+          filters:
+            branches:
+              only:
+                - master
